[package]
edition = "2021"
name = "bbclash-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bbclash = "1.1.1"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
vc-ltl = "5.1.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = "fat"
strip = "symbols"

[patch.crates-io]
bbclash = { git = 'https://github.com/stevefan1999-personal/BBClash' }